--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -18,4 +18,4 @@ jobs:
       - name: Test
         run: docker-compose run --rm app sh -c "python manage.py wait_for_db && python manage.py test"
       - name: Lint
-        run: docker-compose run --rm app sh -c "flake8 --ignore=E275,E203,E122,W391,F401,E225,E231,E302,E391,E261,E262,W293,E251,E303,E305"
+        run: docker-compose run --rm app sh -c "flake8 --ignore= E126,E131,E275,E203,E122,W391,F401,E225,E231,E302,E391,E261,E262,W293,E251,E303,E305"
