--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -13,9 +13,20 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Checkout
         uses: actions/checkout@v2
+
+      # Install Docker Compose
+      - name: Set up Docker and Docker Compose
+        run: |
+          sudo apt-get update
+          sudo apt-get install docker-compose -y
+
+      # Run Tests
       - name: Test
         run: docker-compose run --rm app sh -c "python manage.py wait_for_db && python manage.py test"
+
+      # Run Lint
       - name: Lint
         run: docker-compose run --rm app sh -c "flake8 --ignore=E126,E131,E275,E203,E122,W391,F401,E225,E231,E302,E391,E261,E262,W293,E251,E303,E305"
