--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -17,11 +17,28 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      # Install Docker Compose
-      - name: Set up Docker and Docker Compose
+      # Install Docker
+      - name: Install Docker
         run: |
           sudo apt-get update
-          sudo apt-get install docker-compose -y
+          sudo apt-get install -y docker.io
+          sudo systemctl start docker
+          sudo systemctl enable docker
+
+      # Install Docker Compose
+      - name: Install Docker Compose
+        run: |
+          DOCKER_COMPOSE_VERSION=1.29.2  # Specify the desired version here
+          sudo curl -L "https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+
+      # Check Docker version
+      - name: Check Docker version
+        run: docker --version
+
+      # Check Docker Compose version
+      - name: Check Docker Compose version
+        run: docker-compose --version
 
       # Run Tests
       - name: Test
