--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build:
       context: .
       args:
-        DEV: true
+        DEV: "true" # Wrap the value in quotes
     ports:
       - "8000:8000"
     volumes:
